fix aligning of close button icon

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -41,10 +41,6 @@
     width: 35px;
     font-size: 18px;
     cursor: pointer;
-
-    &__icon {
-      vertical-align: middle;
-    }
   }
 
   &__content {
